k3s/apps/media/sonarr/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: "lscr.io/linuxserver/sonarr:amd64-4.0.17"
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: sonarr-config
              mountPath: /config

            - name: media
              mountPath: /data

      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-pvc

        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
